fixed kurt code

--- a/app/views/narratives/index.html
+++ b/app/views/narratives/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <head>
-  <title>Pusher Test</title>
-  <link rel="parent" href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet" target="_blank">
+  <title>Wordsmith Live</title>
+  <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Monofett|Monoton|Roboto|VT323" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <h2>Pusher Page</h2>
       </div>
     </div>
   </div>
@@ -32,10 +31,13 @@
 </head>
 <style>
 .generated {
-  font-size: 25px;
-  font-family: 'Bungee Shade', cursive;
+  font-size: 16px;
+  font-weight: 100;
+  letter-spacing: 4px;
+  font-family: 'Roboto', sans-serif;
   background-color:#353535;
-  color:#5ea0ec;
+  color:#989898;
+  padding-bottom: 2%;
 }
 .number {
   font-size: 200px;
@@ -44,20 +46,25 @@
   color:#5ea0ec;
 }
 .fact {
-  font-size: 15px;
-  font-family: 'Bungee Shade';
+  font-size: 32px;
+  font-family: 'Roboto', sans-serif;
+  text-align: left;
+  color: #646464;
 }
+
 </style>
 <center>
 <div class="number">
-3421
-<div class="generated">Narratives Generated Today by Wordsmith</div>
+320,421
+<div class="generated">- NARRATIVES GENERATED TODAY BY WORDSMITH -</div>
 </div>
 <br>
 <br>
+
+
 <div class="row">
-  <div class="span4">I<img src="https://media.giphy.com/media/MuztdWJQ4PR7i/giphy.gif" /> </div>
-  <div class="span5"><div class='fact'>Allen R. Astles (UK) potted 10,000 winks in 3 hr 51 min 46 sec at Aberystwyth, Ceredigion, UK in February 1966.
+  <div class="col-md-4"><img src="http://api.giphy.com/v1/gifs/random?api_key=dc6zaTOxFJmzC&tag=the+more+you+know" /> </div>
+  <div class="col-md-8"><div class='fact'>Allen R. Astles (UK) potted 10,000 winks in 3 hr 51 min 46 sec at Aberystwyth, Ceredigion, UK in February 1966.
 </div></div>
 </div>
 </center>
